--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 # -*- mode: conf -*-
 [user]
-	name = Fernando Pérez
-	email = fernando.perez@berkeley.edu
+	name = Samantha Carr
+	email = samantha.carr@berkeley.edu
 
 [include]
   # For Github username / creds / system-specific stuff, etc
